fable/test/semantic_error/write_without_unit.f
      program prog
      num = -8
      write(fmt='(i3)') num
      end
